attempt to fix orientation issues and chart sizing on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -20,3 +20,7 @@
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
 }
+
+canvas {
+  width: 100% !important;
+}
